Added function to refresh button - refreshes graph aswell

--- a/SATSTrainingApp/app/src/main/res/layout/my_training_listview.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/my_training_listview.xml
@@ -64,6 +64,21 @@
                         android:layout_alignParentLeft="true"
                         android:src="@drawable/back_to_now"/>
 
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="150dp"
+                        android:layout_marginLeft="125dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/calendet_mark_right" />
+
+                    <ImageView
+                        android:id="@+id/shadow"
+                        android:layout_width="20dp"
+                        android:layout_height="150dp"
+                        android:layout_marginLeft="215dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/calendet_mark_left" />
+
                 </RelativeLayout>
 
                 <RelativeLayout
