--- a/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
@@ -193,6 +193,7 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_gravity="right"
                         android:gravity="right"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="8dp">
