--- a/SATSTrainingApp/app/src/main/res/layout/class_view.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/class_view.xml
@@ -44,22 +44,22 @@
                     android:id="@+id/class_duration_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/class_name"
-                    android:text="45min" />
+                    android:textSize="19dp"
+                    android:layout_toRightOf="@+id/class_name" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_gravity="right"
                     android:gravity="right">
 
                     <ImageView
                         android:id="@+id/img_participants_class_info"
                         android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_gravity="right"
-                        android:layout_marginRight="7dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_height="23dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="3dp"
                         android:src="@drawable/people_icon" />
 
                     <TextView
@@ -67,6 +67,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginRight="3dp"
+                        android:text="0"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="@color/pink"
                         android:textSize="20dp"
@@ -83,8 +87,8 @@
 
             <LinearLayout
                 android:id="@+id/class_context"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="15dp"
@@ -94,27 +98,39 @@
                 android:paddingRight="10dp">
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_marginBottom="5dp">
 
                     <RatingBar
                         android:id="@+id/sats_rating"
                         style="@style/satsRatingBar"
                         android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_height="27dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="8dp"
                         android:isIndicator="true"
                         android:numStars="5"
                         android:stepSize="1" />
 
-                    <TextView
-                        android:id="@+id/bookedPersonCount"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="18dp"
-                        android:text="25"
-/>
+                        android:gravity="right"
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/bookedPersonCount"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignEnd="@+id/sats_rating"
+                            android:layout_gravity="right"
+                            android:text="25"
+                            android:textSize="13dp" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
