--- a/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
@@ -272,7 +272,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Lägg till i kalender"
+                        android:text="@string/add_to_calendar"
                         android:layout_marginTop="2dp"
                         android:textSize="11sp" />
                 </LinearLayout>
@@ -315,7 +315,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Mer om passet"
+                        android:text="@string/class_info"
                         android:layout_marginTop="1dp"
                         android:textSize="11sp" />
                 </LinearLayout>
