--- a/SATSTrainingApp/app/src/main/res/layout/activity_own.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_own.xml
@@ -49,9 +49,9 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:layout_marginLeft="8dp"
-                        android:text="Type"
                         android:textSize="14dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:text="@string/type"/>
 
                 </LinearLayout>
 
@@ -110,7 +110,7 @@
                         android:layout_marginLeft="2dp"
                         android:layout_marginTop="2dp"
                         android:layout_weight="0.1"
-                        android:text="0 kommentar"
+                        android:text="@string/comments"
                         android:textAlignment="inherit"
                         android:textColor="@color/secondary_color"
                         android:textSize="10dp" />
@@ -131,7 +131,7 @@
                     android:background="@drawable/progressbar_nmi_primary"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="detaljer"
+                    android:text="@string/details"
                     android:textColor="@color/white"
                     android:textSize="12dp"
                     android:textStyle="bold" />
@@ -190,7 +190,7 @@
                         android:id="@+id/text_add_calender"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Lägg till i kalender"
+                        android:text="@string/add_to_calendar"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textSize="11dp" />
                 </LinearLayout>
@@ -237,7 +237,7 @@
                         android:layout_gravity="right"
                         android:layout_toRightOf="@id/ic_more"
                         android:gravity="right"
-                        android:text="Träningsprogram"
+                        android:text="@string/own_class_info"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textSize="11dp" />
                 </RelativeLayout>
